--- a/TemplateApp.DataAccess/TemplateApp.DataAccess.csproj
+++ b/TemplateApp.DataAccess/TemplateApp.DataAccess.csproj
@@ -18,5 +18,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TemplateApp.Services\TemplateApp.Services.csproj" />
+    <ProjectReference Include="..\TemplateApp.Domain\TemplateApp.Domain.csproj" />
   </ItemGroup>
 </Project>
