--- a/TemplateApp.WebApi/TemplateApp.WebApi.csproj
+++ b/TemplateApp.WebApi/TemplateApp.WebApi.csproj
@@ -19,5 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TemplateApp.DataAccess\TemplateApp.DataAccess.csproj" />
     <ProjectReference Include="..\TemplateApp.Services\TemplateApp.Services.csproj" />
+    <ProjectReference Include="..\TemplateApp.Common\TemplateApp.Common.csproj" />
+    <ProjectReference Include="..\TemplateApp.Domain\TemplateApp.Domain.csproj" />
   </ItemGroup>
 </Project>
